--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL = "/"
+baseURL = "https://roser-zy.github.io/page/"
 # Title of your website (required).
 title = "Roser Space"
 # Your theme name
